header invoice section done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Invoice App Harrisfoes</title>
   </head>
-  <body className="dark">
+  <body className="dark transition-all duration-175 ease-in-out">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
